chore: add prepare script to package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dist"
   ],
   "scripts": {
+    "prepare": "npm run prepack",
     "prepack": "nuxt-module-build build",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
