--- a/package.json
+++ b/package.json
@@ -41,15 +41,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.9",
-    "@nuxt/eslint-config": "^0.3.13",
     "@nuxt/module-builder": "^0.8.1",
     "@nuxt/schema": "^3.12.4",
     "@nuxt/test-utils": "^3.13.1",
     "@types/node": "^20.14.11",
     "changelogen": "^0.5.5",
-    "eslint": "^9.7.0",
     "nuxt": "^3.12.4",
-    "typescript": "latest",
+    "typescript": "^5.5.4",
     "vue-tsc": "^2.0.26"
   }
 }
