--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
-    "lint": "eslint ."
+    "release": "npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags"
   },
   "dependencies": {
     "@nuxt/kit": "^3.12.4",
@@ -43,11 +42,14 @@
     "@nuxt/devtools": "^1.3.9",
     "@nuxt/module-builder": "^0.8.1",
     "@nuxt/schema": "^3.12.4",
-    "@nuxt/test-utils": "^3.13.1",
     "@types/node": "^20.14.11",
     "changelogen": "^0.5.5",
     "nuxt": "^3.12.4",
     "typescript": "^5.5.4",
     "vue-tsc": "^2.0.26"
+  },
+  "overrides": {
+    "glob": "9.0.0",
+    "rimraf": "^4.0.0"
   }
 }
