--- a/package.json
+++ b/package.json
@@ -31,25 +31,20 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags"
+    "release": "npm run prepack && npm publish && git push --follow-tags"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.12.4",
     "@skyanalytics/js": "github:carum98/skyanalytics-js",
-    "defu": "6.1.4"
+    "@nuxt/kit": "^3.11.2",
+    "defu": "^6.1.4"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.9",
-    "@nuxt/module-builder": "^0.8.1",
-    "@nuxt/schema": "^3.12.4",
-    "@types/node": "^20.14.11",
-    "changelogen": "^0.5.5",
-    "nuxt": "^3.12.4",
-    "typescript": "^5.5.4",
-    "vue-tsc": "^2.0.26"
-  },
-  "overrides": {
-    "glob": "9.0.0",
-    "rimraf": "^4.0.0"
+    "@nuxt/module-builder": "^0.6.0",
+    "@nuxt/schema": "^3.11.2",
+    "@types/node": "^20.12.7",
+    "nuxt": "^3.11.2",
+    "typescript": "^5.4.5",
+    "vue-tsc": "^2.0.15"
   }
 }
