--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
     "defu": "^6.1.4"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.3.9",
-    "@nuxt/module-builder": "^0.6.0",
-    "@nuxt/schema": "^3.11.2",
-    "@types/node": "^20.12.7",
-    "nuxt": "^3.11.2",
-    "typescript": "^5.4.5",
-    "vue-tsc": "^2.0.15"
+    "@nuxt/module-builder": "^0.8.1",
+    "@nuxt/schema": "^3.12.4",
+    "@types/node": "^20.14.11",
+    "changelogen": "^0.5.5",
+    "nuxt": "^3.12.4",
+    "typescript": "^5.5.4",
+    "vue-tsc": "^2.0.26"
   }
 }
