--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dist"
   ],
   "scripts": {
-    "prepare": "npm run prepack",
+    "prepare": "nuxt-module-build build --stub && nuxt-module-build prepare",
     "prepack": "nuxt-module-build build",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
