--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run prepack && npm publish && git push --follow-tags"
+    "release": "npm run prepack && npm publish --access public && git push --follow-tags"
   },
   "dependencies": {
     "@skyanalytics/js": "github:carum98/skyanalytics-js",
